Adjust securityTest.js for Developers group changes (#1735)